--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="col-lg-5 col-md-7 col-sm-12 plain">
           <p>Hi, I'm Hanul. My name means "sky" in native Korean language and is a pure <u><a href="https://en.wikipedia.org/wiki/Hangul" target="_blank">Hangul</a></u> word. I was born in the 90s and grew up by the ocean & mountains of South Korea.
-            I've been living, studying, and working in NYC since 2018. Thank you for visiting my web portfolio site. Please feel free to look around!</p>
+            I've been studying, working, and living in NYC since 2018. Thank you for visiting my web portfolio site. Please feel free to look around!</p>
         </div>
 
         <!-- Information -->
