--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section id="title">
 
     <nav class="navbar navbar-expand-sm fixed-top">
-      <a class="navbar-brand clicked" href="hanul.html"><i class="fas fa-cat"></i> Hanul Park</a>
+      <a class="navbar-brand clicked" href="index.html"><i class="fas fa-cat"></i> Hanul Park</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
