--- a/designer.html
+++ b/designer.html
@@ -74,19 +74,28 @@
             <div class="carousel-item">
               <p class="colorful">COVID-19_Antibody_NYC</p>
               <h4>Data Visualization Report</h4>
-              <p class="plain">Optical Refinement and Textual Analyses of 2 Primary Datasets <u><a href="https://data.cityofnewyork.us/Health/DOHMH-COVID-Antibody-by-Age/7umd-hdjb" target="blank_">COVID-19 Antibody by Age</a></u> and <u><a
-                    href="https://data.cityofnewyork.us/Health/DOHMH-COVID-19-Antibody-by-Borough/x98t-3bbk" target="blank_">COVID-19 Antibody by Borough</a></u> by Department of Health and Mental Hygiene (DOHMH) and 1 Supplementary Dataset <u><a
-                    href="https://data.cityofnewyork.us/City-Government/New-York-City-Population-by-Borough-1950-2040/xywu-7bv9" target="blank_">New York City Population by Borough, 1950-2040</a></u> by Department of City Planning (DCP), Researched on
-                <u><a href="https://opendata.cityofnewyork.us/" target="blank_">NYC OpenData</a></u> and Visualized with <u><a href="https://datastudio.google.com/" target="blank_">Google Data Studio</a></u>
+              <p class="plain">Optical Refinement and Textual Analyses of Datasets on Antibody Test Rates & Results <u><a href="https://data.cityofnewyork.us/Health/DOHMH-COVID-Antibody-by-Age/7umd-hdjb" target="blank_">by Age</a></u> and <u><a
+                    href="https://data.cityofnewyork.us/Health/DOHMH-COVID-19-Antibody-by-Borough/x98t-3bbk" target="blank_">by Borough</a></u> in NYC, Researched on <u><a href="https://opendata.cityofnewyork.us/" target="blank_">NYC OpenData</a></u>
+                and
+                Visualized with <u><a href="https://datastudio.google.com/" target="blank_">Google Data Studio</a></u>
               </p>
               <br /><br />
               <iframe width="100%" height="569" src="https://datastudio.google.com/embed/reporting/ab9b7fd3-68b9-45fd-8ad9-7cabfa7a5422/page/IAe5B" frameborder="0" style="border:0" allowfullscreen></iframe>
-              <div class="col-12 category">
-                <a href="https://datastudio.google.com/reporting/ab9b7fd3-68b9-45fd-8ad9-7cabfa7a5422/page/IAe5B" target="_blank">
-                  <button type="button" class="btn-sm collapsible blueGradient">
-                    Webiste
-                  </button>
-                </a>
+              <div class="row">
+                <div class="col-lg-6 category">
+                  <a href="https://docs.google.com/document/d/1MNx_M3YFkhhpObl3peVfen_LjLFqgjMQaNziBM8L6a0/edit?usp=sharing" target="_blank">
+                    <button type="button" class="btn-sm collapsible blueGradient">
+                      Report
+                    </button>
+                  </a>
+                </div>
+                <div class="col-lg-6 category">
+                  <a href="https://datastudio.google.com/reporting/ab9b7fd3-68b9-45fd-8ad9-7cabfa7a5422/page/IAe5B" target="_blank">
+                    <button type="button" class="btn-sm collapsible blueGradient">
+                      Webiste
+                    </button>
+                  </a>
+                </div>
               </div>
             </div>
 
