--- a/technologist.html
+++ b/technologist.html
@@ -82,8 +82,7 @@
               <button type="button" class="btn-sm collapsible greenGradient clicked">
                 Magazine
               </button>
-              <iframe src="file:///Users/macbookpro/Documents/GitHub/portfolio/BirDress/BirDress_Magazine.pdf" frameborder="0" width="100%" height="1000"
-                allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" type="application/pdf"></iframe>
+              <embed src="file:///Users/macbookpro/Documents/GitHub/portfolio/BirDress/BirDress_Magazine.pdf" width="100%" height="1000" type="application/pdf">
               <br /><br />
             </div>
 
