--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <p>Hi, I'm Hanul. My name means "sky" in native Korean language and is a pure <u><a href="https://en.wikipedia.org/wiki/Hangul" target="_blank">Hangul</a></u> word.
             I was born in the 90s and grew up by the ocean & mountains of South Korea.
             I've been studying, working, and living in New York City since 2018.
-            Thank you for visiting my portfolio. Please look around!</p>
+            Thank you for visiting my portfolio. Feel free to look around!</p>
         </div>
 
         <!-- Information -->
