--- a/designer.html
+++ b/designer.html
@@ -18,7 +18,7 @@
   <!-- Title -->
   <section id="title">
 
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top bg-white">
       <a class="navbar-brand" href="index.html"><i class="fas fa-folder-open"></i> Hanul Park</a>
       <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="icon-bar top-bar"></span>
