--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Title -->
   <section id="title">
 
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top bg-white">
       <a class="navbar-brand clicked" href="index.html"><i class="fas fa-folder-open"></i> Hanul Park</a>
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav ms-auto navbar-nav-scroll" style="--bs-scroll-height: 100px;">
